fixed css that is showing a horizontal scroll bar
git-svn-id: https://source.eait.uq.edu.au/svn/maenad-data-registry/trunk@548 a06b0660-b68b-0410-9a37-e6c9a29c9ca9

--- a/data-registry-webapp/src/main/webapp/css/style.css
+++ b/data-registry-webapp/src/main/webapp/css/style.css
@@ -160,11 +160,7 @@ body a {
     width: 90%;
 }
 
-#search {
-    width: 90%;
-}
-
-.edit-table .remove-link {
+div#search.edit-table .remove-link {
     font-size: 0.7em;
     color: #ff0000;
 }
@@ -500,7 +496,7 @@ h6 {
 #header-inner, #topnav-inner {
     margin: 0pt auto;
     padding: 0pt;
-    width: 1000px;
+    width: 100%;
 }
 
 #header-inner h1 {
@@ -644,8 +640,8 @@ h6 {
 div#search {
     background: transparent url('../images/form-left.png') no-repeat scroll 0pt 0pt;
     position: absolute;
+    right: 10px;
     top: 40px;
-    margin: 0 0 0 775px;
 }
 
 div#search form {
